new P1 with my photo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body
 	position:fixed;
 	width:100%;
 	margin-top:-7px;
-	height:90px;
+	height:110px;
 	background-color:#ffffff;
 	margin-bottom:7px;
 	font-family:Verdana,sans-serif;
@@ -75,120 +75,28 @@ a:hover
 	padding-top:15px;}
 
 </style>
+<title>John Meroth</title>
 </head>
 <body>
-<div id="header"><strong>John F. Meroth</strong><br>
-13 Essex Street, Charlestown, MA 02129<br>
-<a href="mailto:jmeroth@alum.rpi.edu"><span id="email">jmeroth@alum.rpi.edu</span></a><br>
-<a href="http://www.spidercode.org"><i><b>www.spidercode.org</b></i></a><br>
-<strong>781-856-4140 </strong></div>
+<div id="header"><strong>John F. Meroth</strong><br />
+<img src="JohnSubway124_92.bmp" alt="my picture" /></div>
 <div class="left"></div>
 <div class="right">
-<h3>PROFESSIONAL OBJECTIVE:</h3>
+<h3>PROJECT1:</h3>
 <br/>
-<p>Developer, Analyst or Integration Professional with an emphasis on database and reporting.  I seek to utilize my technical skills (SQL, Programming, XML), and business experience. </p>
+<p><a href="p1.spidercode.biz">details</a></p>
 <br/>
-<h3>WORK EXPERIENCE:</h3>
+<h3>PROJECT 2:</h3>
 <br/>
-<p><b>Application Developer</b></p>
-<p>Commonwealth of MA, Integration Services Group</p>
-<p>March 2012-present</p>
-<ul>
-<li>
-<p>Application Administrator:  Maintenance and configuration of WebSphere based Service Desk application supporting ITIL processes.  Includes Asset, Chargeback, Service Request and Workflow Management.</p>
-</li>
-<li>
- <p>Database Analyst:  Perform troubleshooting and analysis utilizing 'bottom up' data modeling. Provide back-end application maintenance.  Extensive experience with Oracle 11g and Oracle SQL Developer.  Some familiarity with MS SQL Server, MySQL and  PostgreSQL.</p>
-</li>
-<li>
-<p>Integration Programming:  Using Windows Batch Files, XML and SFTP to automate previously manual datafile transfer among enterprise applications.</p>
-</li>
-<li>
-<p>JasperReports Server Administrator:  Introduced real-time, web reports and dashboards using iReport Designer.</p>
-</li>
-<li>
-<p>Atlassian JIRA Administrator:  Release Management software for Project and Issue tracking. Design of custom work flows to facilitate project management.</p>
-</li>
-</ul>
-<p><br></p>
-
-<p><b>Asset Data Analyst</b></p>
-<p>Commonwealth of MA, Technology Finance Group</p>
-<p>February 2010-March 2012</p>
-<ul>
-<li>
-<p>Hardware and Software Maintenance:  Managed annual asset maintenance.  Performed reconciliation  of cost and warranty data with procurement records reducing unnecessary maintenance spending.</p>
-</li><li>
-<p>MS Access, Visual Basic:  Created an IT Asset application consisting of a relational database, forms and summary reports.  Enabled rapid data entry, reconciliation and cost reporting.</p>
-</li></ul>
-<p><br></p>
-
-<p><b>Cost Accountant</b></p>
-<p>Commonwealth of MA, Technology Finance Group</p>
-<p>February 2007-March 2010</p>
-<ul>
-<li>
-<p>Revenue projection:  Created an algorithm and report to visualize trending of monthly Chargeback Revenues for $50M IT Services department.</p>
-</li><li>
-<p>Information Warehouse:  Acquired in depth knowledge of state accounting system and enterprise data warehouse.</p>
-</li></ul>
+<p><a href="p2.spidercode.biz">details</a></p>
 <br/>
-
-<h3>PROFESSIONAL INTERESTS:</h3>
+<h3>PROJECT 3:</h3>
 <br/>
-<p><b>Education and Certifications</b></p>
-<ul>
-<li>
-<p>Rensselaer Polytechnic Institute, Troy, New York, BS Physics</p>
-</li>
-<li>
-<p>Oracle Database SQL Certified Expert 1Z0-047</p>
-</li>
-<li>
-<p>ITIL Foundation Certified, ITIL V3</p>
-</li></ul>
+<p><a href="p3.spidercode.biz">details</a></p>
 <br/>
-<p><b>Organizations</b></p>
-<ul>
-<li>
-<p>DAMA New England - Data management professional organization.</p>
-</li>
-<li>
-<p>Boston PHP - PHP, Web Development, and Open Source technology, http://events.bostonphp.org</p>
-</li></ul>
-<p><br>
-</p>
-<p><b>Skills and Training</b></p>
-<ul>
-<li>
-<p>Dynamic Web Applications, taking websites to the next level, PHP.</p>
-</li>
-<li>
-<p>Git Version Control and GitHub utilized to maintain local and live environments.</p>
-</li>
-<li>
-<p>Data Structures, Java - Bunker Hill Community College.</p>
-</li>
-<li>
-<p>Object Oriented Programming, C++ - Bunker Hill Community College.</p>
-</li>
-<li>
-<p>Programming Languages, Python - Udacity, CS-262.
-</p>
-</li>
-<li>
-<p>Working with Sub queries Using MS SQL Server. </p>
-</li>
-<li>
-<p>MySQL databases for on-line web applications and back-end for Wordpress site.</p>
-</li>
-<li>
-<p>IDE’s: NetBeans, Eclipse, Visual Studio, iReport Designer, XMLSpy.</p>
-</li>
-<li>
-<p>Business Analysis for IT Professional – NAGE.</p>
-</li>
-</ul>
+<h3>PROJECT 4:</h3>
+<br/>
+<p><a href="p4.spidercode.biz">details</a></p>
 </div>
 <div id="footer">
 <p><em>Technologies: </em>HTML5, CSS, Git, Notepad&#43;&#43;</font></p>
